# smarty_pants

./: .gitignore  CHANGELOG  Cargo.toml  LICENSE  README.md  example.brain
examples/: load_save.rs  simple_use_case.rs
src/: lib.rs  neural_network.rs
