[package]
name = "smarty_pants"
version = "0.1.0"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Merlin1846/smarty_pants"
keywords = ["machine-learning","ai","neural-network"]
categories = ["science"]
description = "A light wheight Neural Network library with a focus on ease of use and speed."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
